# PreTrained-Text-Classification

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  pytest.ini
notebooks/: 01_finetune.ipnyb  evaluate.ipnyb
scripts/: README.md  Train.README.md  inference.py  train.py
tests/: conftest.py  test_data_set_utils.py  test_text_classification_inference.test.py  text_classification_inference.test.py
utils/: __init__.py  data_set_utils.py  path_utils.py
